
Changes in version 1.7-0

  * lag, lead, diff for pseries objects: functions now take care of the time
    dimension when shifting observations within each individual. Previously, 
    shifting was performed row-wise (neglecting the time dimension).
    The argument 'shift' is introduced to control shifting behaviour, possible 
    values are "time" (default) and "row" (behaviour up until and incl. plm 1.6-6).
    Note that, however, the diff-ing performed in first-difference model estimation
    by plm(..., model = "fd") is based on row-wise differences of the model matrix.
  * pbnftest: new function for (modified) BNF statistic (Durbin-Watson test 
    generalised to panels) and Baltagi/Wu's LBI statistic.
    (Bhargava/Franzini/Narendranathan (1982), Baltagi/Wu (1999)). 
  * pcdtest: bias-corrected scaled LM test implemented (test = "bcsclm") as in
    Baltagi/Feng/Kao (2012).
  * groupGenerics now used for 'pseries' objects, implemented as a wrapper 
    for methods in groups 'Math', 'Ops' and 'Complex' (see ?groupGeneric).
    Thus, propagation to a higher or lower data type works correctly when 
    performed on pseries, e.g. c("pseries", "integer") is propagated
    to c("pseries", "numeric") if an operation returns a decimal.
  * summary.plm: removed support for ill-named argument '.vcov', instead use
    'vcov'. '.vcov' has been deprecated in plm 1.6-4 on CRAN since 2016-11-30.
  * as.data.frame.pdata.frame gained argument 'keep.attributes'.
  * [.pdata.frame: in case a single column, i.e., a pseries is returned, this 
    pseries now has names (now consistent to extraction by $.pdata.frame and
    [[.pdata.frame).
  * is.pseries: added function to check if an object qualifies as a pseries.
  * (internal) is.index, has.index: new non-exported functions to check if an
    object is or has a proper index (in the sense of the plm package).
  * pdata.frame: fixed bug so that pdata.frames with only one column can be 
    created if drop.index = TRUE is set.